--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+ <h1>User info</h1>
+
+ <%= form_with model: @post_image do |f| %>
+
+ <h4>Name</h4>
+      <%= f.text_field :name %>
+
+        <h4>Image</h4>
+      <%= f.file_field :image, accept: "image/*" %>
+
+    <h4>Introduction</h4>
+      <%= f.text_area :introduction %>
+    <%= f.submit 'Update User' %>
+  <% end %>
+
